--- a/package.json
+++ b/package.json
@@ -9,14 +9,31 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@material-ui/core": "^4.12.4",
+    "@mui/icons-material": "^5.6.1",
+    "@mui/material": "^5.6.1",
+    "animate.css": "^4.1.1",
+    "axios": "^0.26.1",
+    "dotenv": "^16.0.0",
+    "js-cookie": "^3.0.1",
+    "material-ui-popup-state": "^2.0.0",
     "next": "12.1.5",
+    "qr-scanner": "^1.4.1",
+    "qrcode": "^1.5.0",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "react-input-mask": "^2.0.4",
+    "sweetalert2": "^11.4.9"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.1",
     "@types/node": "17.0.23",
+    "@types/qrcode": "^1.4.2",
     "@types/react": "18.0.4",
     "@types/react-dom": "18.0.0",
+    "@types/styled-components": "^5.1.25",
     "eslint": "8.13.0",
     "eslint-config-next": "12.1.5",
     "typescript": "4.6.3"
