Create Error Page

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,11 +23,6 @@
       "@components/*": ["ui/components/*"]
     }
   },
-  "include": [
-    "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx",
-    "src/pages/products/expiration_date/[id].js"
-  ],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
 }
