--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-input-mask": "^2.0.4",
+    "react-qr-reader": "^3.0.0-beta-1",
     "sweetalert2": "^11.4.9"
   },
   "devDependencies": {
