--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@prisma/client": "^3.14.0",
     "animate.css": "^4.1.1",
     "axios": "^0.26.1",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.0",
     "js-cookie": "^3.0.1",
+    "jsonwebtoken": "^8.5.1",
     "next": "12.1.5",
     "nookies": "^2.5.2",
     "qrcode": "^1.5.0",
@@ -28,8 +30,10 @@
     "twilio": "^3.77.1"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/cookie": "^0.5.1",
     "@types/js-cookie": "^3.0.1",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "17.0.23",
     "@types/qrcode": "^1.4.2",
     "@types/react": "18.0.4",
